--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-responsive-masonry": "^2.1.7",
+    "react-tooltip": "^5.24.0",
     "sharp": "^0.32.6",
     "sugar-high": "^0.5.5"
   },
