--- a/package.json
+++ b/package.json
@@ -13,17 +13,28 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
+    "@nivo/boxplot": "^0.84.0",
+    "@nivo/bump": "^0.84.0",
+    "@nivo/chord": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
+    "@nivo/swarmplot": "^0.84.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.10",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^0.0.5",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-responsive-masonry": "^2.1.7",
     "react-tooltip": "^5.24.0",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
     "sugar-high": "^0.5.5"
   },
