--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nivo/chord": "^0.84.0",
     "@nivo/pie": "^0.84.0",
     "@nivo/swarmplot": "^0.84.0",
+    "@nivo/treemap": "^0.84.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.10",
     "@vercel/analytics": "^1.1.1",
