--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "next": "14.0.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
     "react-responsive-masonry": "^2.1.7",
     "react-tooltip": "^5.24.0",
     "rehype-katex": "^7.0.0",
+    "rehype-pretty-code": "^0.12.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
     "sugar-high": "^0.5.5"
