--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-cytoscapejs": "^2.0.0",
@@ -37,9 +38,7 @@
     "react-tooltip": "^5.24.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.12.0",
-    "remark-math": "^6.0.0",
-    "sharp": "^0.32.6",
-    "sugar-high": "^0.5.5"
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
